# python-nvidia-codec

./: .gitignore  README.md  README.org  color.py  cuviddec.py  decode.py  decoder.py  extras.py  nvcuvid.py  pyav.py  setup.cfg  test.py  utils.py
.github/workflows/: docs.yml
examples/: classify.py  crop_scale_color_download.py  decode.py  decode_torch.py  dry_decode.py  screenshot.py  screenshot_stream.py  test.py
src/nvidia_codec/: __init__.py  color.py  common.py  cuda.py  cuviddec.py  decode.py  nvcuvid.py  pyav.py  surface.py
src/nvidia_codec/core/: __init__.py  cuda.py  cuviddec.py  decode.py  nvcuvid.py
src/nvidia_codec/ffmpeg/: common.py  libavcodec.py  libavformat.py  libavutil.py  test  test.c  test.py
src/nvidia_codec/ffmpeg/include/: libavcodec.py  libavformat.py  libavutil.py
src/nvidia_codec/utils/: __init__.py  color.py  compat.py  decode.py  demux.py  player.py  screenshot.py
