[metadata]
name = nvidia-codec
version = 0.0.7
author = Zesen Qian
author_email = nvidia-codec@riaqn.org
description = Pythonic interface to Nvidia Codec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riaqn/python-nvidia-codec
project_urls =
    Bug Tracker = https://github.com/riaqn/python-nvidia-codec/issues
classifiers =
    Programming Language :: Python :: 3 :: Only    
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)    
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    torch

[options.packages.find]
where = src